crates/tui/snapshots/fullscreen/usage/usage_account_changed.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                                    [Dashboard]

            ┌── Usage ────────────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │> Status  ·  Account changed. Run /usage again.                          │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────│                                                                         │───────────
  > Build an└─────────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to close  ·  Run /usage to refresh
