crates/tui/snapshots/fullscreen/usage/usage_bigmodel.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: bigmodel_screen
---
  .                                                                [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │   BigModel    Z.AI                                           │
        │                                                              │
        │> BigModel plan  ·  Not reported                              │
        │                                                              │
        │  5-hour limit ────────────────────────────────────────────── │
        │  5h window  ·  87% left (13% used)                           │
        │  Resets  ·  2026-09-28 00:00 UTC                             │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────└──────────────────────────────────────────────────────────────┘──────
  > Build anything
  ─────────────────────────────────────────────────────────── Automatic model

  Tab/Shift+Tab to switch  ·  Esc to close  ·  Run /usage to refresh
