crates/tui/snapshots/fullscreen/usage/usage_loading.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]

> /usage┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Loading…                                                    │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close
